--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "pydantic>=2.12.4",
     "pydantic-ai>=1.18.0",
     "beautifulsoup4>=4.14.2",
+    "google-genai>=1.50.0",
 ]
 
 [build-system]
