--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "pydantic-ai>=1.18.0",
     "beautifulsoup4>=4.14.2",
     "google-genai>=1.50.0",
+    "logfire>=0.50.0",
 ]
 
 [project.scripts]
