--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "httpx>=0.28.1",
     "pydantic>=2.12.4",
     "pydantic-ai>=1.18.0",
+    "pydantic-settings>=2.0.0",
     "beautifulsoup4>=4.14.2",
     "google-genai>=1.50.0",
     "logfire>=0.50.0",
