feat(storage): add SQLite database for source deduplication
- Create SourceDatabase class with SQLite backend
- Implement URL-based deduplication with unique constraint
- Add methods: get_source_by_url, get_source_by_id, add_source
- Add get_sources_by_ids for batch retrieval
- Add indexes on url and content_hash for performance
- Add storage path configuration to Settings
- Create storage module with proper package structure

--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,7 @@ htmlcov/
 
 # Example outputs (JSON files only)
 examples/output/*.json
+
+# Data directory (generated files)
+data/*
+!data/.gitkeep
