--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
     "beautifulsoup4>=4.14.2",
     "google-genai>=1.50.0",
     "logfire>=0.50.0",
+    "scholarly>=1.7.11",
 ]
 
 [project.scripts]
