chore: add pymupdf and arxiv dependencies

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -16,3 +16,7 @@ GOOGLE_API_KEY=your-gemini-api-key-here
 # For Anthropic
 # ANTHROPIC_API_KEY=your-anthropic-api-key-here
 
+# Image Sources (optional)
+# Get a free key at https://pro.europeana.eu/page/get-api
+# EUROPEANA_API_KEY=your-europeana-api-key-here
+
