--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -16,6 +16,8 @@ dependencies = [
     "google-genai>=1.50.0",
     "logfire>=0.50.0",
     "scholarly>=1.7.11",
+    "pymupdf>=1.26.6",
+    "arxiv>=2.3.1",
 ]
 
 [project.scripts]
