--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -18,10 +18,11 @@ dependencies = [
     "scholarly>=1.7.11",
     "pymupdf>=1.26.6",
     "arxiv>=2.3.1",
+    "typer>=0.15.1",
 ]
 
 [project.scripts]
-rivalry-fs = "rivalry_research.cli.file_search_status:main"
+rivalry = "rivalry_research.cli.main:app"
 
 [build-system]
 requires = ["uv_build>=0.9.5,<0.10.0"]
