--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -19,6 +19,8 @@ dependencies = [
     "pymupdf>=1.26.6",
     "arxiv>=2.3.1",
     "typer>=0.15.1",
+    "pillow>=11.0.0",
+    "rich>=13.0.0",
 ]
 
 [project.scripts]
